contour/manifests/echoserver-tls-passthrough.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-1
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver-1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver-1
    spec:
      containers:
      - name: echoserver
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20201006-42d00bd
        ports:
        - name: http-api
          containerPort: 3000
        - name: https-api
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
        volumeMounts:
          - mountPath: /run/secrets/certs/
            name: echoserver-cert
            readOnly: true
      volumes:
      - name: echoserver-cert
        secret:
          secretName: echoserver-cert
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-1
spec:
  ports:
  - name: http
    port: 80
    targetPort: http-api
  - name: https
    port: 443
    targetPort: https-api
  selector:
    app.kubernetes.io/name: echoserver-1
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echoserver-1
spec:
  virtualhost:
    fqdn: passthrough.127-0-0-101.nip.io
    tls:
      passthrough: true
  tcpproxy:
    services:
    - name: echoserver-1
      port: 443
# http --verify=certs/internal-root-ca.pem https://passthrough.127-0-0-101.nip.io
